tests/stage2/t3_diagnostics/type_errors/ref_modification.fuse
// EXPECTED ERROR:
// cannot assign through `ref` parameter

data class Foo(var x: Int)

fn bar(ref f: Foo) {
  f.x = 99
}

@entrypoint
fn main() {
  var f = Foo(1)
  bar(ref f)
}
